// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`patches image fields > existing > group 1`] = `
{
  "group": [
    {
      "field": {
        "alt": null,
        "copyright": null,
        "dimensions": {
          "height": 1,
          "width": 1,
        },
        "edit": {
          "background": "transparent",
          "x": 0,
          "y": 0,
          "zoom": 1,
        },
        "id": "id-existing",
        "url": "https://images.unsplash.com/reserve/HgZuGu3gSD6db21T3lxm_San%20Zenone.jpg?w=6373&h=4253&fit=crop",
      },
    },
  ],
}
`;

exports[`patches image fields > existing > shared slice 1`] = `
{
  "slices": [
    {
      "id": "b9dd0f2c3f8",
      "items": [
        {
          "field": {
            "alt": null,
            "copyright": null,
            "dimensions": {
              "height": 1,
              "width": 1,
            },
            "edit": {
              "background": "transparent",
              "x": 0,
              "y": 0,
              "zoom": 1,
            },
            "id": "id-existing",
            "url": "https://images.unsplash.com/photo-1426604966848-d7adac402bff?w=5616&h=3744&fit=crop",
          },
        },
      ],
      "primary": {
        "field": {
          "alt": null,
          "copyright": null,
          "dimensions": {
            "height": 1,
            "width": 1,
          },
          "edit": {
            "background": "transparent",
            "x": 0,
            "y": 0,
            "zoom": 1,
          },
          "id": "id-existing",
          "url": "https://images.unsplash.com/photo-1426604966848-d7adac402bff?w=5616&h=3744&fit=crop",
        },
        "group": [
          {
            "field": {
              "alt": null,
              "copyright": null,
              "dimensions": {
                "height": 1,
                "width": 1,
              },
              "edit": {
                "background": "transparent",
                "x": 0,
                "y": 0,
                "zoom": 1,
              },
              "id": "id-existing",
              "url": "https://images.unsplash.com/photo-1426604966848-d7adac402bff?w=5616&h=3744&fit=crop",
            },
          },
        ],
      },
      "slice_label": null,
      "slice_type": "dignissim",
      "variation": "vitae",
      "version": "bfc9053",
    },
  ],
}
`;

exports[`patches image fields > existing > slice 1`] = `
{
  "slices": [
    {
      "id": "306297c5eda",
      "items": [
        {
          "field": {
            "alt": null,
            "copyright": null,
            "dimensions": {
              "height": 1,
              "width": 1,
            },
            "edit": {
              "background": "transparent",
              "x": 0,
              "y": 0,
              "zoom": 1,
            },
            "id": "id-existing",
            "url": "https://images.unsplash.com/photo-1604537529428-15bcbeecfe4d?w=4240&h=2832&fit=crop",
          },
        },
      ],
      "primary": {
        "field": {
          "alt": null,
          "copyright": null,
          "dimensions": {
            "height": 1,
            "width": 1,
          },
          "edit": {
            "background": "transparent",
            "x": 0,
            "y": 0,
            "zoom": 1,
          },
          "id": "id-existing",
          "url": "https://images.unsplash.com/photo-1604537529428-15bcbeecfe4d?w=4240&h=2832&fit=crop",
        },
      },
      "slice_label": "Aliquet",
      "slice_type": "vel",
    },
  ],
}
`;

exports[`patches image fields > existing > static zone 1`] = `
{
  "field": {
    "alt": null,
    "copyright": null,
    "dimensions": {
      "height": 1,
      "width": 1,
    },
    "edit": {
      "background": "transparent",
      "x": 0,
      "y": 0,
      "zoom": 1,
    },
    "id": "id-existing",
    "url": "https://images.unsplash.com/photo-1587502537745-84b86da1204f?w=6550&h=4367&fit=crop",
  },
}
`;

exports[`patches image fields > new > group 1`] = `
{
  "group": [
    {
      "field": {
        "alt": null,
        "copyright": null,
        "dimensions": {
          "height": 1,
          "width": 1,
        },
        "edit": {
          "background": "transparent",
          "x": 0,
          "y": 0,
          "zoom": 1,
        },
        "id": "dfdd322ca9d",
        "url": "https://images.unsplash.com/reserve/HgZuGu3gSD6db21T3lxm_San%20Zenone.jpg?w=6373&h=4253&fit=crop",
      },
    },
  ],
}
`;

exports[`patches image fields > new > shared slice 1`] = `
{
  "slices": [
    {
      "id": "b9dd0f2c3f8",
      "items": [
        {
          "field": {
            "alt": null,
            "copyright": null,
            "dimensions": {
              "height": 1,
              "width": 1,
            },
            "edit": {
              "background": "transparent",
              "x": 0,
              "y": 0,
              "zoom": 1,
            },
            "id": "0eddbd0255b",
            "url": "https://images.unsplash.com/reserve/HgZuGu3gSD6db21T3lxm_San%20Zenone.jpg?w=6373&h=4253&fit=crop",
          },
        },
      ],
      "primary": {
        "field": {
          "alt": null,
          "copyright": null,
          "dimensions": {
            "height": 1,
            "width": 1,
          },
          "edit": {
            "background": "transparent",
            "x": 0,
            "y": 0,
            "zoom": 1,
          },
          "id": "0eddbd0255b",
          "url": "https://images.unsplash.com/reserve/HgZuGu3gSD6db21T3lxm_San%20Zenone.jpg?w=6373&h=4253&fit=crop",
        },
        "group": [
          {
            "field": {
              "alt": null,
              "copyright": null,
              "dimensions": {
                "height": 1,
                "width": 1,
              },
              "edit": {
                "background": "transparent",
                "x": 0,
                "y": 0,
                "zoom": 1,
              },
              "id": "0eddbd0255b",
              "url": "https://images.unsplash.com/reserve/HgZuGu3gSD6db21T3lxm_San%20Zenone.jpg?w=6373&h=4253&fit=crop",
            },
          },
        ],
      },
      "slice_label": null,
      "slice_type": "dignissim",
      "variation": "vitae",
      "version": "bfc9053",
    },
  ],
}
`;

exports[`patches image fields > new > slice 1`] = `
{
  "slices": [
    {
      "id": "306297c5eda",
      "items": [
        {
          "field": {
            "alt": null,
            "copyright": null,
            "dimensions": {
              "height": 1,
              "width": 1,
            },
            "edit": {
              "background": "transparent",
              "x": 0,
              "y": 0,
              "zoom": 1,
            },
            "id": "2beb55ec2f4",
            "url": "https://images.unsplash.com/photo-1444464666168-49d633b86797?w=4844&h=3234&fit=crop",
          },
        },
      ],
      "primary": {
        "field": {
          "alt": null,
          "copyright": null,
          "dimensions": {
            "height": 1,
            "width": 1,
          },
          "edit": {
            "background": "transparent",
            "x": 0,
            "y": 0,
            "zoom": 1,
          },
          "id": "2beb55ec2f4",
          "url": "https://images.unsplash.com/photo-1444464666168-49d633b86797?w=4844&h=3234&fit=crop",
        },
      },
      "slice_label": "Aliquet",
      "slice_type": "vel",
    },
  ],
}
`;

exports[`patches image fields > new > static zone 1`] = `
{
  "field": {
    "alt": null,
    "copyright": null,
    "dimensions": {
      "height": 1,
      "width": 1,
    },
    "edit": {
      "background": "transparent",
      "x": 0,
      "y": 0,
      "zoom": 1,
    },
    "id": "bbad670dad7",
    "url": "https://images.unsplash.com/photo-1470071459604-3b5ec3a7fe05?w=7372&h=4392&fit=crop",
  },
}
`;

exports[`patches image fields > otherRepository > group 1`] = `
{
  "group": [
    {
      "field": {
        "alt": "Massa id neque aliquam vestibulum morbi blandit cursus risus",
        "copyright": null,
        "dimensions": {
          "height": 1,
          "width": 1,
        },
        "edit": {
          "background": "#cfc26f",
          "x": -2885,
          "y": -2419,
          "zoom": 1.7509753524211642,
        },
        "id": "8d0985c0990",
        "url": "https://images.unsplash.com/photo-1446329813274-7c9036bd9a1f",
      },
    },
  ],
}
`;

exports[`patches image fields > otherRepository > shared slice 1`] = `
{
  "slices": [
    {
      "id": "b9dd0f2c3f8",
      "items": [
        {
          "field": {
            "alt": "Fermentum odio eu feugiat pretium nibh ipsum consequat",
            "copyright": null,
            "dimensions": {
              "height": 1,
              "width": 1,
            },
            "edit": {
              "background": "#9ed252",
              "x": -1720,
              "y": -191,
              "zoom": 1.6165685319845957,
            },
            "id": "35eaa8ebee4",
            "url": "https://images.unsplash.com/photo-1418065460487-3e41a6c84dc5",
          },
        },
      ],
      "primary": {
        "field": {
          "alt": "Pellentesque pulvinar pellentesque habitant morbi tristique senectus et netus et malesuada fames ac",
          "copyright": null,
          "dimensions": {
            "height": 1,
            "width": 1,
          },
          "edit": {
            "background": "#4f4f59",
            "x": 3094,
            "y": -2976,
            "zoom": 1.0855120641844143,
          },
          "id": "35eaa8ebee4",
          "url": "https://images.unsplash.com/photo-1418065460487-3e41a6c84dc5",
        },
        "group": [
          {
            "field": {
              "alt": "Id aliquet risus feugiat in",
              "copyright": null,
              "dimensions": {
                "height": 1,
                "width": 1,
              },
              "edit": {
                "background": "#42f5cf",
                "x": 427,
                "y": 731,
                "zoom": 1.6417661415510265,
              },
              "id": "35eaa8ebee4",
              "url": "https://images.unsplash.com/photo-1418065460487-3e41a6c84dc5",
            },
          },
        ],
      },
      "slice_label": null,
      "slice_type": "dignissim",
      "variation": "vitae",
      "version": "bfc9053",
    },
  ],
}
`;

exports[`patches image fields > otherRepository > slice 1`] = `
{
  "slices": [
    {
      "id": "306297c5eda",
      "items": [
        {
          "field": {
            "alt": "Pellentesque nec nam aliquam sem",
            "copyright": null,
            "dimensions": {
              "height": 1,
              "width": 1,
            },
            "edit": {
              "background": "#f72dec",
              "x": 2027,
              "y": 7,
              "zoom": 1.9216652845315787,
            },
            "id": "7a35bc5aa2f",
            "url": "https://images.unsplash.com/photo-1470071459604-3b5ec3a7fe05",
          },
        },
      ],
      "primary": {
        "field": {
          "alt": "Quam nulla porttitor massa id neque aliquam vestibulum morbi blandit",
          "copyright": null,
          "dimensions": {
            "height": 1,
            "width": 1,
          },
          "edit": {
            "background": "#60cbac",
            "x": -484,
            "y": -2038,
            "zoom": 1.8400009569805118,
          },
          "id": "7a35bc5aa2f",
          "url": "https://images.unsplash.com/photo-1470071459604-3b5ec3a7fe05",
        },
      },
      "slice_label": "Aliquet",
      "slice_type": "vel",
    },
  ],
}
`;

exports[`patches image fields > otherRepository > static zone 1`] = `
{
  "field": {
    "alt": "Gravida rutrum quisque non tellus orci",
    "copyright": null,
    "dimensions": {
      "height": 1,
      "width": 1,
    },
    "edit": {
      "background": "#b1d17b",
      "x": 3291,
      "y": -730,
      "zoom": 1.061566393836766,
    },
    "id": "4a95cc61c37",
    "url": "https://images.unsplash.com/photo-1604537529428-15bcbeecfe4d",
  },
}
`;

exports[`patches image fields > otherRepositoryEmpty > group 1`] = `
{
  "group": [
    {
      "field": {
        "alt": null,
        "copyright": null,
        "dimensions": null,
        "id": null,
        "url": null,
      },
    },
  ],
}
`;

exports[`patches image fields > otherRepositoryEmpty > shared slice 1`] = `
{
  "slices": [
    {
      "id": "b9dd0f2c3f8",
      "items": [
        {
          "field": {
            "alt": null,
            "copyright": null,
            "dimensions": null,
            "id": null,
            "url": null,
          },
        },
      ],
      "primary": {
        "field": {
          "alt": null,
          "copyright": null,
          "dimensions": null,
          "id": null,
          "url": null,
        },
        "group": [
          {
            "field": {
              "alt": null,
              "copyright": null,
              "dimensions": null,
              "id": null,
              "url": null,
            },
          },
        ],
      },
      "slice_label": null,
      "slice_type": "dignissim",
      "variation": "vitae",
      "version": "bfc9053",
    },
  ],
}
`;

exports[`patches image fields > otherRepositoryEmpty > slice 1`] = `
{
  "slices": [
    {
      "id": "306297c5eda",
      "items": [
        {
          "field": {
            "alt": null,
            "copyright": null,
            "dimensions": null,
            "id": null,
            "url": null,
          },
        },
      ],
      "primary": {
        "field": {
          "alt": null,
          "copyright": null,
          "dimensions": null,
          "id": null,
          "url": null,
        },
      },
      "slice_label": "Aliquet",
      "slice_type": "vel",
    },
  ],
}
`;

exports[`patches image fields > otherRepositoryEmpty > static zone 1`] = `
{
  "field": {
    "alt": null,
    "copyright": null,
    "dimensions": null,
    "id": null,
    "url": null,
  },
}
`;

exports[`patches image fields > otherRepositoryWithThumbnails > group 1`] = `
{
  "group": [
    {
      "field": {
        "alt": "Massa id neque aliquam vestibulum morbi blandit cursus risus",
        "copyright": null,
        "dimensions": {
          "height": 1,
          "width": 1,
        },
        "edit": {
          "background": "#cfc26f",
          "x": -2885,
          "y": -2419,
          "zoom": 1.7509753524211642,
        },
        "id": "8d0985c0990",
        "square": {
          "alt": "Massa id neque aliquam vestibulum morbi blandit cursus risus",
          "copyright": null,
          "dimensions": {
            "height": 1,
            "width": 1,
          },
          "edit": {
            "background": "#cfc26f",
            "x": -2885,
            "y": -2419,
            "zoom": 1.7509753524211642,
          },
          "id": "8d0985c0990",
          "url": "https://images.unsplash.com/photo-1446329813274-7c9036bd9a1f?some=other&query=params",
        },
        "url": "https://images.unsplash.com/photo-1446329813274-7c9036bd9a1f?some=query",
      },
    },
  ],
}
`;

exports[`patches image fields > otherRepositoryWithThumbnails > shared slice 1`] = `
{
  "slices": [
    {
      "id": "b9dd0f2c3f8",
      "items": [
        {
          "field": {
            "alt": "Fermentum odio eu feugiat pretium nibh ipsum consequat",
            "copyright": null,
            "dimensions": {
              "height": 1,
              "width": 1,
            },
            "edit": {
              "background": "#9ed252",
              "x": -1720,
              "y": -191,
              "zoom": 1.6165685319845957,
            },
            "id": "35eaa8ebee4",
            "square": {
              "alt": "Fermentum odio eu feugiat pretium nibh ipsum consequat",
              "copyright": null,
              "dimensions": {
                "height": 1,
                "width": 1,
              },
              "edit": {
                "background": "#9ed252",
                "x": -1720,
                "y": -191,
                "zoom": 1.6165685319845957,
              },
              "id": "35eaa8ebee4",
              "url": "https://images.unsplash.com/photo-1418065460487-3e41a6c84dc5?some=other&query=params",
            },
            "url": "https://images.unsplash.com/photo-1418065460487-3e41a6c84dc5?some=query",
          },
        },
      ],
      "primary": {
        "field": {
          "alt": "Pellentesque pulvinar pellentesque habitant morbi tristique senectus et netus et malesuada fames ac",
          "copyright": null,
          "dimensions": {
            "height": 1,
            "width": 1,
          },
          "edit": {
            "background": "#4f4f59",
            "x": 3094,
            "y": -2976,
            "zoom": 1.0855120641844143,
          },
          "id": "35eaa8ebee4",
          "square": {
            "alt": "Pellentesque pulvinar pellentesque habitant morbi tristique senectus et netus et malesuada fames ac",
            "copyright": null,
            "dimensions": {
              "height": 1,
              "width": 1,
            },
            "edit": {
              "background": "#4f4f59",
              "x": 3094,
              "y": -2976,
              "zoom": 1.0855120641844143,
            },
            "id": "35eaa8ebee4",
            "url": "https://images.unsplash.com/photo-1418065460487-3e41a6c84dc5?some=other&query=params",
          },
          "url": "https://images.unsplash.com/photo-1418065460487-3e41a6c84dc5?some=query",
        },
        "group": [
          {
            "field": {
              "alt": "Id aliquet risus feugiat in",
              "copyright": null,
              "dimensions": {
                "height": 1,
                "width": 1,
              },
              "edit": {
                "background": "#42f5cf",
                "x": 427,
                "y": 731,
                "zoom": 1.6417661415510265,
              },
              "id": "35eaa8ebee4",
              "square": {
                "alt": "Id aliquet risus feugiat in",
                "copyright": null,
                "dimensions": {
                  "height": 1,
                  "width": 1,
                },
                "edit": {
                  "background": "#42f5cf",
                  "x": 427,
                  "y": 731,
                  "zoom": 1.6417661415510265,
                },
                "id": "35eaa8ebee4",
                "url": "https://images.unsplash.com/photo-1418065460487-3e41a6c84dc5?some=other&query=params",
              },
              "url": "https://images.unsplash.com/photo-1418065460487-3e41a6c84dc5?some=query",
            },
          },
        ],
      },
      "slice_label": null,
      "slice_type": "dignissim",
      "variation": "vitae",
      "version": "bfc9053",
    },
  ],
}
`;

exports[`patches image fields > otherRepositoryWithThumbnails > slice 1`] = `
{
  "slices": [
    {
      "id": "306297c5eda",
      "items": [
        {
          "field": {
            "alt": "Pellentesque nec nam aliquam sem",
            "copyright": null,
            "dimensions": {
              "height": 1,
              "width": 1,
            },
            "edit": {
              "background": "#f72dec",
              "x": 2027,
              "y": 7,
              "zoom": 1.9216652845315787,
            },
            "id": "7a35bc5aa2f",
            "square": {
              "alt": "Pellentesque nec nam aliquam sem",
              "copyright": null,
              "dimensions": {
                "height": 1,
                "width": 1,
              },
              "edit": {
                "background": "#f72dec",
                "x": 2027,
                "y": 7,
                "zoom": 1.9216652845315787,
              },
              "id": "7a35bc5aa2f",
              "url": "https://images.unsplash.com/photo-1470071459604-3b5ec3a7fe05?some=other&query=params",
            },
            "url": "https://images.unsplash.com/photo-1470071459604-3b5ec3a7fe05?some=query",
          },
        },
      ],
      "primary": {
        "field": {
          "alt": "Quam nulla porttitor massa id neque aliquam vestibulum morbi blandit",
          "copyright": null,
          "dimensions": {
            "height": 1,
            "width": 1,
          },
          "edit": {
            "background": "#60cbac",
            "x": -484,
            "y": -2038,
            "zoom": 1.8400009569805118,
          },
          "id": "7a35bc5aa2f",
          "square": {
            "alt": "Quam nulla porttitor massa id neque aliquam vestibulum morbi blandit",
            "copyright": null,
            "dimensions": {
              "height": 1,
              "width": 1,
            },
            "edit": {
              "background": "#60cbac",
              "x": -484,
              "y": -2038,
              "zoom": 1.8400009569805118,
            },
            "id": "7a35bc5aa2f",
            "url": "https://images.unsplash.com/photo-1470071459604-3b5ec3a7fe05?some=other&query=params",
          },
          "url": "https://images.unsplash.com/photo-1470071459604-3b5ec3a7fe05?some=query",
        },
      },
      "slice_label": "Aliquet",
      "slice_type": "vel",
    },
  ],
}
`;

exports[`patches image fields > otherRepositoryWithThumbnails > static zone 1`] = `
{
  "field": {
    "alt": "Gravida rutrum quisque non tellus orci",
    "copyright": null,
    "dimensions": {
      "height": 1,
      "width": 1,
    },
    "edit": {
      "background": "#b1d17b",
      "x": 3291,
      "y": -730,
      "zoom": 1.061566393836766,
    },
    "id": "4a95cc61c37",
    "square": {
      "alt": "Gravida rutrum quisque non tellus orci",
      "copyright": null,
      "dimensions": {
        "height": 1,
        "width": 1,
      },
      "edit": {
        "background": "#b1d17b",
        "x": 3291,
        "y": -730,
        "zoom": 1.061566393836766,
      },
      "id": "4a95cc61c37",
      "url": "https://images.unsplash.com/photo-1604537529428-15bcbeecfe4d?some=other&query=params",
    },
    "url": "https://images.unsplash.com/photo-1604537529428-15bcbeecfe4d?some=query",
  },
}
`;

exports[`patches image fields > otherRepositoryWithThumbnailsNoAlt > group 1`] = `
{
  "group": [
    {
      "field": {
        "alt": null,
        "copyright": null,
        "dimensions": {
          "height": 1,
          "width": 1,
        },
        "edit": {
          "background": "#cfc26f",
          "x": -2885,
          "y": -2419,
          "zoom": 1.7509753524211642,
        },
        "id": "8d0985c0990",
        "square": {
          "alt": null,
          "copyright": null,
          "dimensions": {
            "height": 1,
            "width": 1,
          },
          "edit": {
            "background": "#cfc26f",
            "x": -2885,
            "y": -2419,
            "zoom": 1.7509753524211642,
          },
          "id": "8d0985c0990",
          "url": "https://images.unsplash.com/photo-1446329813274-7c9036bd9a1f?some=other&query=params",
        },
        "url": "https://images.unsplash.com/photo-1446329813274-7c9036bd9a1f?some=query",
      },
    },
  ],
}
`;

exports[`patches image fields > otherRepositoryWithThumbnailsNoAlt > shared slice 1`] = `
{
  "slices": [
    {
      "id": "b9dd0f2c3f8",
      "items": [
        {
          "field": {
            "alt": null,
            "copyright": null,
            "dimensions": {
              "height": 1,
              "width": 1,
            },
            "edit": {
              "background": "#9ed252",
              "x": -1720,
              "y": -191,
              "zoom": 1.6165685319845957,
            },
            "id": "35eaa8ebee4",
            "square": {
              "alt": null,
              "copyright": null,
              "dimensions": {
                "height": 1,
                "width": 1,
              },
              "edit": {
                "background": "#9ed252",
                "x": -1720,
                "y": -191,
                "zoom": 1.6165685319845957,
              },
              "id": "35eaa8ebee4",
              "url": "https://images.unsplash.com/photo-1418065460487-3e41a6c84dc5?some=other&query=params",
            },
            "url": "https://images.unsplash.com/photo-1418065460487-3e41a6c84dc5?some=query",
          },
        },
      ],
      "primary": {
        "field": {
          "alt": null,
          "copyright": null,
          "dimensions": {
            "height": 1,
            "width": 1,
          },
          "edit": {
            "background": "#4f4f59",
            "x": 3094,
            "y": -2976,
            "zoom": 1.0855120641844143,
          },
          "id": "35eaa8ebee4",
          "square": {
            "alt": null,
            "copyright": null,
            "dimensions": {
              "height": 1,
              "width": 1,
            },
            "edit": {
              "background": "#4f4f59",
              "x": 3094,
              "y": -2976,
              "zoom": 1.0855120641844143,
            },
            "id": "35eaa8ebee4",
            "url": "https://images.unsplash.com/photo-1418065460487-3e41a6c84dc5?some=other&query=params",
          },
          "url": "https://images.unsplash.com/photo-1418065460487-3e41a6c84dc5?some=query",
        },
        "group": [
          {
            "field": {
              "alt": null,
              "copyright": null,
              "dimensions": {
                "height": 1,
                "width": 1,
              },
              "edit": {
                "background": "#42f5cf",
                "x": 427,
                "y": 731,
                "zoom": 1.6417661415510265,
              },
              "id": "35eaa8ebee4",
              "square": {
                "alt": null,
                "copyright": null,
                "dimensions": {
                  "height": 1,
                  "width": 1,
                },
                "edit": {
                  "background": "#42f5cf",
                  "x": 427,
                  "y": 731,
                  "zoom": 1.6417661415510265,
                },
                "id": "35eaa8ebee4",
                "url": "https://images.unsplash.com/photo-1418065460487-3e41a6c84dc5?some=other&query=params",
              },
              "url": "https://images.unsplash.com/photo-1418065460487-3e41a6c84dc5?some=query",
            },
          },
        ],
      },
      "slice_label": null,
      "slice_type": "dignissim",
      "variation": "vitae",
      "version": "bfc9053",
    },
  ],
}
`;

exports[`patches image fields > otherRepositoryWithThumbnailsNoAlt > slice 1`] = `
{
  "slices": [
    {
      "id": "306297c5eda",
      "items": [
        {
          "field": {
            "alt": null,
            "copyright": null,
            "dimensions": {
              "height": 1,
              "width": 1,
            },
            "edit": {
              "background": "#f72dec",
              "x": 2027,
              "y": 7,
              "zoom": 1.9216652845315787,
            },
            "id": "7a35bc5aa2f",
            "square": {
              "alt": null,
              "copyright": null,
              "dimensions": {
                "height": 1,
                "width": 1,
              },
              "edit": {
                "background": "#f72dec",
                "x": 2027,
                "y": 7,
                "zoom": 1.9216652845315787,
              },
              "id": "7a35bc5aa2f",
              "url": "https://images.unsplash.com/photo-1470071459604-3b5ec3a7fe05?some=other&query=params",
            },
            "url": "https://images.unsplash.com/photo-1470071459604-3b5ec3a7fe05?some=query",
          },
        },
      ],
      "primary": {
        "field": {
          "alt": null,
          "copyright": null,
          "dimensions": {
            "height": 1,
            "width": 1,
          },
          "edit": {
            "background": "#60cbac",
            "x": -484,
            "y": -2038,
            "zoom": 1.8400009569805118,
          },
          "id": "7a35bc5aa2f",
          "square": {
            "alt": null,
            "copyright": null,
            "dimensions": {
              "height": 1,
              "width": 1,
            },
            "edit": {
              "background": "#60cbac",
              "x": -484,
              "y": -2038,
              "zoom": 1.8400009569805118,
            },
            "id": "7a35bc5aa2f",
            "url": "https://images.unsplash.com/photo-1470071459604-3b5ec3a7fe05?some=other&query=params",
          },
          "url": "https://images.unsplash.com/photo-1470071459604-3b5ec3a7fe05?some=query",
        },
      },
      "slice_label": "Aliquet",
      "slice_type": "vel",
    },
  ],
}
`;

exports[`patches image fields > otherRepositoryWithThumbnailsNoAlt > static zone 1`] = `
{
  "field": {
    "alt": null,
    "copyright": null,
    "dimensions": {
      "height": 1,
      "width": 1,
    },
    "edit": {
      "background": "#b1d17b",
      "x": 3291,
      "y": -730,
      "zoom": 1.061566393836766,
    },
    "id": "4a95cc61c37",
    "square": {
      "alt": null,
      "copyright": null,
      "dimensions": {
        "height": 1,
        "width": 1,
      },
      "edit": {
        "background": "#b1d17b",
        "x": 3291,
        "y": -730,
        "zoom": 1.061566393836766,
      },
      "id": "4a95cc61c37",
      "url": "https://images.unsplash.com/photo-1604537529428-15bcbeecfe4d?some=other&query=params",
    },
    "url": "https://images.unsplash.com/photo-1604537529428-15bcbeecfe4d?some=query",
  },
}
`;

exports[`patches image fields > otherRepositoryWithTypeThumbnail > group 1`] = `
{
  "group": [
    {
      "field": {
        "alt": "Massa id neque aliquam vestibulum morbi blandit cursus risus",
        "copyright": null,
        "dimensions": {
          "height": 1,
          "width": 1,
        },
        "edit": {
          "background": "#cfc26f",
          "x": -2885,
          "y": -2419,
          "zoom": 1.7509753524211642,
        },
        "id": "8d0985c0990",
        "type": {
          "alt": "Massa id neque aliquam vestibulum morbi blandit cursus risus",
          "copyright": null,
          "dimensions": {
            "height": 1,
            "width": 1,
          },
          "edit": {
            "background": "#cfc26f",
            "x": -2885,
            "y": -2419,
            "zoom": 1.7509753524211642,
          },
          "id": "8d0985c0990",
          "url": "https://images.unsplash.com/photo-1446329813274-7c9036bd9a1f?some=other&query=params",
        },
        "url": "https://images.unsplash.com/photo-1446329813274-7c9036bd9a1f?some=query",
      },
    },
  ],
}
`;

exports[`patches image fields > otherRepositoryWithTypeThumbnail > shared slice 1`] = `
{
  "slices": [
    {
      "id": "b9dd0f2c3f8",
      "items": [
        {
          "field": {
            "alt": "Fermentum odio eu feugiat pretium nibh ipsum consequat",
            "copyright": null,
            "dimensions": {
              "height": 1,
              "width": 1,
            },
            "edit": {
              "background": "#9ed252",
              "x": -1720,
              "y": -191,
              "zoom": 1.6165685319845957,
            },
            "id": "35eaa8ebee4",
            "type": {
              "alt": "Fermentum odio eu feugiat pretium nibh ipsum consequat",
              "copyright": null,
              "dimensions": {
                "height": 1,
                "width": 1,
              },
              "edit": {
                "background": "#9ed252",
                "x": -1720,
                "y": -191,
                "zoom": 1.6165685319845957,
              },
              "id": "35eaa8ebee4",
              "url": "https://images.unsplash.com/photo-1418065460487-3e41a6c84dc5?some=other&query=params",
            },
            "url": "https://images.unsplash.com/photo-1418065460487-3e41a6c84dc5?some=query",
          },
        },
      ],
      "primary": {
        "field": {
          "alt": "Pellentesque pulvinar pellentesque habitant morbi tristique senectus et netus et malesuada fames ac",
          "copyright": null,
          "dimensions": {
            "height": 1,
            "width": 1,
          },
          "edit": {
            "background": "#4f4f59",
            "x": 3094,
            "y": -2976,
            "zoom": 1.0855120641844143,
          },
          "id": "35eaa8ebee4",
          "type": {
            "alt": "Pellentesque pulvinar pellentesque habitant morbi tristique senectus et netus et malesuada fames ac",
            "copyright": null,
            "dimensions": {
              "height": 1,
              "width": 1,
            },
            "edit": {
              "background": "#4f4f59",
              "x": 3094,
              "y": -2976,
              "zoom": 1.0855120641844143,
            },
            "id": "35eaa8ebee4",
            "url": "https://images.unsplash.com/photo-1418065460487-3e41a6c84dc5?some=other&query=params",
          },
          "url": "https://images.unsplash.com/photo-1418065460487-3e41a6c84dc5?some=query",
        },
        "group": [
          {
            "field": {
              "alt": "Id aliquet risus feugiat in",
              "copyright": null,
              "dimensions": {
                "height": 1,
                "width": 1,
              },
              "edit": {
                "background": "#42f5cf",
                "x": 427,
                "y": 731,
                "zoom": 1.6417661415510265,
              },
              "id": "35eaa8ebee4",
              "type": {
                "alt": "Id aliquet risus feugiat in",
                "copyright": null,
                "dimensions": {
                  "height": 1,
                  "width": 1,
                },
                "edit": {
                  "background": "#42f5cf",
                  "x": 427,
                  "y": 731,
                  "zoom": 1.6417661415510265,
                },
                "id": "35eaa8ebee4",
                "url": "https://images.unsplash.com/photo-1418065460487-3e41a6c84dc5?some=other&query=params",
              },
              "url": "https://images.unsplash.com/photo-1418065460487-3e41a6c84dc5?some=query",
            },
          },
        ],
      },
      "slice_label": null,
      "slice_type": "dignissim",
      "variation": "vitae",
      "version": "bfc9053",
    },
  ],
}
`;

exports[`patches image fields > otherRepositoryWithTypeThumbnail > slice 1`] = `
{
  "slices": [
    {
      "id": "306297c5eda",
      "items": [
        {
          "field": {
            "alt": "Pellentesque nec nam aliquam sem",
            "copyright": null,
            "dimensions": {
              "height": 1,
              "width": 1,
            },
            "edit": {
              "background": "#f72dec",
              "x": 2027,
              "y": 7,
              "zoom": 1.9216652845315787,
            },
            "id": "7a35bc5aa2f",
            "type": {
              "alt": "Pellentesque nec nam aliquam sem",
              "copyright": null,
              "dimensions": {
                "height": 1,
                "width": 1,
              },
              "edit": {
                "background": "#f72dec",
                "x": 2027,
                "y": 7,
                "zoom": 1.9216652845315787,
              },
              "id": "7a35bc5aa2f",
              "url": "https://images.unsplash.com/photo-1470071459604-3b5ec3a7fe05?some=other&query=params",
            },
            "url": "https://images.unsplash.com/photo-1470071459604-3b5ec3a7fe05?some=query",
          },
        },
      ],
      "primary": {
        "field": {
          "alt": "Quam nulla porttitor massa id neque aliquam vestibulum morbi blandit",
          "copyright": null,
          "dimensions": {
            "height": 1,
            "width": 1,
          },
          "edit": {
            "background": "#60cbac",
            "x": -484,
            "y": -2038,
            "zoom": 1.8400009569805118,
          },
          "id": "7a35bc5aa2f",
          "type": {
            "alt": "Quam nulla porttitor massa id neque aliquam vestibulum morbi blandit",
            "copyright": null,
            "dimensions": {
              "height": 1,
              "width": 1,
            },
            "edit": {
              "background": "#60cbac",
              "x": -484,
              "y": -2038,
              "zoom": 1.8400009569805118,
            },
            "id": "7a35bc5aa2f",
            "url": "https://images.unsplash.com/photo-1470071459604-3b5ec3a7fe05?some=other&query=params",
          },
          "url": "https://images.unsplash.com/photo-1470071459604-3b5ec3a7fe05?some=query",
        },
      },
      "slice_label": "Aliquet",
      "slice_type": "vel",
    },
  ],
}
`;

exports[`patches image fields > otherRepositoryWithTypeThumbnail > static zone 1`] = `
{
  "field": {
    "alt": "Gravida rutrum quisque non tellus orci",
    "copyright": null,
    "dimensions": {
      "height": 1,
      "width": 1,
    },
    "edit": {
      "background": "#b1d17b",
      "x": 3291,
      "y": -730,
      "zoom": 1.061566393836766,
    },
    "id": "4a95cc61c37",
    "type": {
      "alt": "Gravida rutrum quisque non tellus orci",
      "copyright": null,
      "dimensions": {
        "height": 1,
        "width": 1,
      },
      "edit": {
        "background": "#b1d17b",
        "x": 3291,
        "y": -730,
        "zoom": 1.061566393836766,
      },
      "id": "4a95cc61c37",
      "url": "https://images.unsplash.com/photo-1604537529428-15bcbeecfe4d?some=other&query=params",
    },
    "url": "https://images.unsplash.com/photo-1604537529428-15bcbeecfe4d?some=query",
  },
}
`;
